// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button block 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      foo
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Button circle size 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      foo
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Button disabled 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      foo
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Button ghost 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      foo
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Button ghost active 1`] = `
<TouchableOpacity
  activeOpacity={1}
  block={false}
  disabled={false}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 44,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      Object {
        "height": 44,
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      Object {
        "backgroundColor": "#12c287",
      },
      Object {
        "borderRadius": 0,
      },
      Object {
        "backgroundColor": "#10ae79",
      },
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 1,
      },
      Object {
        "borderColor": "#12c287",
      },
      Object {
<<<<<<< Updated upstream
        "borderColor": "#10ae79",
=======
        "backgroundColor": "transparent",
<<<<<<< HEAD
        "borderColor": "#DCDCDC",
=======
        "borderColor": "#e6e6e6",
>>>>>>> b637eda272eb3fc5f486370022d43106ec61503a
>>>>>>> Stashed changes
      },
      false,
      false,
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 16,
          },
          Object {
            "fontSize": 16,
          },
          Object {
            "color": "#fff",
          },
          Object {
<<<<<<< Updated upstream
            "color": "#fff",
=======
<<<<<<< HEAD
            "color": "#DCDCDC",
=======
            "color": "#e6e6e6",
>>>>>>> b637eda272eb3fc5f486370022d43106ec61503a
          },
          false,
        ]
      }
    >
      foo
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`Button ghost disabled 1`] = `
<TouchableOpacity
  activeOpacity={1}
  block={false}
  disabled={true}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 44,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      Object {
        "height": 44,
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#e6e6e6",
        "borderWidth": 1,
      },
      Object {
        "borderRadius": 4,
      },
      false,
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 1,
      },
      Object {
        "backgroundColor": "transparent",
        "borderColor": "#fff",
      },
      false,
      Object {
        "opacity": 0.5,
      },
      Object {
        "borderColor": "#bcbcbc",
        "opacity": 1,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 16,
          },
          Object {
            "fontSize": 16,
          },
          Object {
            "color": "#464646",
>>>>>>> Stashed changes
          },
          false,
          Object {
            "color": "#12c287",
          },
          Object {
            "color": "#10ae79",
          },
          false,
        ]
      }
    >
      foo
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`Button icon 1`] = `
<react-native-mock>
  <react-native-mock>
    <img
      alt=""
      src="https://zhongantecheng.github.io/zarm/images/state.18e78939.png"
    />
    <react-native-mock>
      foo
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Button loading 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock />
    <react-native-mock>
      foo
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Button renders correctly 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      foo
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Button shape is radius 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      foo
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Button size 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      foo
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Button theme 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock>
      foo
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;
